fixed shop screen to look better on smaller screens

--- a/shop.css
+++ b/shop.css
@@ -6,6 +6,8 @@ body {
     margin: 0;
     padding-top: 8vw; 
     background-color: #ECCAE7;
+    position: fixed;
+    
 }
 
 /* shop-screen */
@@ -355,7 +357,7 @@ body {
     position: fixed;
     inset: 0;
     width: 100vw; 
-    height: 100dvh; 
+    height: 100%; 
     background: white;
     display: flex;
     flex-direction: column;
@@ -508,8 +510,10 @@ body {
 
 .tbc {
     margin: 100px;
-    font-size: 10px;
-    padding: 10px 100px;
+    width: clamp(20px, 5vw, 100px);
+    font-size: clamp(7px, 2vw, 10px);
+    width: clamp(200px, 5vw, 300px);
+    padding: 4%;
     text-align: center;
     border-radius: 30px; 
     cursor: pointer; 
